Fix map jumping when autocomplete is open

--- a/public/stylesheets/sass/minimal.sass
+++ b/public/stylesheets/sass/minimal.sass
@@ -67,4 +67,6 @@ ul.obs-list
       display: none
 
 #googleMap
-  margin-left: 380px
+  position: absolute
+  left: 381px
+  top: 103px
